k8s/projects/三层Web应用生产化部署/实现/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop3t
  labels:
    # 阶段 5 / 课 16：命名空间级强制 restricted 档
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
